hw2/LLGrammar.java
/* Generated By:JavaCC: Do not edit this line. LLGrammar.java */
import java.io.*;

public class LLGrammar implements LLGrammarConstants {
  public static void main(String [] args) {
    if (args.length < 1) {
      System.out.println("Need a file name as command-line argument.");
      return;
    }
    try {
      FileReader input = new FileReader(args[0]);
      new LLGrammar(input).Program();
      input.close();
    } catch (TokenMgrError e) {
      System.err.println(e);
    } catch (Exception e) {
      System.err.println(e);
    }
  }

//
// PARSER SECTION ---------------------------------------------------------------
//

// Program -> {ClassDecl}
//
  static final public void Program() throws ParseException {
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 6:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      ClassDecl();
    }
    jj_consume_token(0);
  }

// ClassDecl -> "class" <ID> ["extends" <ID>] "{" {VarDecl} {"public" MethodDecl} "}"
//
  static final public void ClassDecl() throws ParseException {
    jj_consume_token(6);
    jj_consume_token(ID);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 7:
      jj_consume_token(7);
      jj_consume_token(ID);
      break;
    default:
      jj_la1[1] = jj_gen;
      ;
    }
    jj_consume_token(54);
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 12:
      case 13:
      case 14:
      case ID:
        ;
        break;
      default:
        jj_la1[2] = jj_gen;
        break label_2;
      }
      VarDecl();
    }
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 9:
        ;
        break;
      default:
        jj_la1[3] = jj_gen;
        break label_3;
      }
      jj_consume_token(9);
      MethodDecl();
    }
    jj_consume_token(55);
  }

// MethodDecl -> ExtType <ID> "(" [Param {"," Param}] ")" 
//                 "{" {VarDecl} {Stmt} "}"
//            |  "static" "void" "main" "(" "String" "[" "]" <ID> ")"
//                 "{" {VarDecl} {Stmt} "}" 
// 
  static final public void MethodDecl() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 11:
    case 12:
    case 13:
    case 14:
    case ID:
      ExtType();
      jj_consume_token(ID);
      jj_consume_token(50);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 12:
      case 13:
      case 14:
      case ID:
        Param();
        label_4:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case 48:
            ;
            break;
          default:
            jj_la1[4] = jj_gen;
            break label_4;
          }
          jj_consume_token(48);
          Param();
        }
        break;
      default:
        jj_la1[5] = jj_gen;
        ;
      }
      jj_consume_token(51);
      jj_consume_token(54);
      label_5:
      while (true) {
        if (jj_2_1(2)) {
          ;
        } else {
          break label_5;
        }
        VarDecl();
      }
      label_6:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 19:
        case 20:
        case 22:
        case 23:
        case 24:
        case ID:
        case 54:
          ;
          break;
        default:
          jj_la1[6] = jj_gen;
          break label_6;
        }
        Stmt();
      }
      jj_consume_token(55);
      break;
    case 8:
      jj_consume_token(8);
      jj_consume_token(11);
      jj_consume_token(10);
      jj_consume_token(50);
      jj_consume_token(15);
      jj_consume_token(52);
      jj_consume_token(53);
      jj_consume_token(ID);
      jj_consume_token(51);
      jj_consume_token(54);
      label_7:
      while (true) {
        if (jj_2_2(2)) {
          ;
        } else {
          break label_7;
        }
        VarDecl();
      }
      label_8:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 19:
        case 20:
        case 22:
        case 23:
        case 24:
        case ID:
        case 54:
          ;
          break;
        default:
          jj_la1[7] = jj_gen;
          break label_8;
        }
        Stmt();
      }
      jj_consume_token(55);
      break;
    default:
      jj_la1[8] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

// Param -> Type <ID> 
//
  static final public void Param() throws ParseException {
    Type();
    jj_consume_token(ID);
  }

// VarDecl -> Type <ID> ["=" Expr] ";"

//  
  static final public void VarDecl() throws ParseException {
    Type();
    jj_consume_token(ID);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 46:
      jj_consume_token(46);
      Expr();
      break;
    default:
      jj_la1[9] = jj_gen;
      ;
    }
    jj_consume_token(47);
  }

// ExtType -> Type | "void"
//
  static final public void ExtType() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 12:
    case 13:
    case 14:
    case ID:
      Type();
      break;
    case 11:
      jj_consume_token(11);
      break;
    default:
      jj_la1[10] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

// Type -> BasicType [ "[" "]" ]
//      |  <ID>
//
  static final public void Type() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 12:
    case 13:
    case 14:
      BasicType();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 52:
        jj_consume_token(52);
        jj_consume_token(53);
        break;
      default:
        jj_la1[11] = jj_gen;
        ;
      }
      break;
    case ID:
      jj_consume_token(ID);
      break;
    default:
      jj_la1[12] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

// BasicType -> "int" | "double" | "boolean"
//
  static final public void BasicType() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 13:
      jj_consume_token(13);
      break;
    case 14:
      jj_consume_token(14);
      break;
    case 12:
      jj_consume_token(12);
      break;
    default:
      jj_la1[13] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

// Stmt -> "{" {Stmt} "}"
//      |  ExtID ExprOrAssign 
//      |  "if" "(" Expr ")" Stmt ["else" Stmt]
//      |  "while" "(" Expr ")" Stmt
//      |  "System" "." "out" "." "println" "(" [PrArg] ")" ";"
//      |  "return" [Expr] ";"
//
  static final public void Stmt() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 54:
      jj_consume_token(54);
      label_9:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 19:
        case 20:
        case 22:
        case 23:
        case 24:
        case ID:
        case 54:
          ;
          break;
        default:
          jj_la1[14] = jj_gen;
          break label_9;
        }
        Stmt();
      }
      jj_consume_token(55);
      break;
    case 19:
    case ID:
      ExtId();
      ExprOrAssign();
      break;
    case 20:
      jj_consume_token(20);
      jj_consume_token(50);
      Expr();
      jj_consume_token(51);
      Stmt();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 21:
        jj_consume_token(21);
        Stmt();
        break;
      default:
        jj_la1[15] = jj_gen;
        ;
      }
      break;
    case 22:
      jj_consume_token(22);
      jj_consume_token(50);
      Expr();
      jj_consume_token(51);
      Stmt();
      break;
    case 24:
      jj_consume_token(24);
      jj_consume_token(49);
      jj_consume_token(25);
      jj_consume_token(49);
      jj_consume_token(26);
      jj_consume_token(50);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 16:
      case 17:
      case 18:
      case 19:
      case INTLIT:
      case DBLLIT:
      case STRLIT:
      case ID:
      case 34:
      case 39:
      case 50:
        PrArg();
        break;
      default:
        jj_la1[16] = jj_gen;
        ;
      }
      jj_consume_token(51);
      jj_consume_token(47);
      break;
    case 23:
      jj_consume_token(23);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 16:
      case 17:
      case 18:
      case 19:
      case INTLIT:
      case DBLLIT:
      case ID:
      case 34:
      case 39:
      case 50:
        Expr();
        break;
      default:
        jj_la1[17] = jj_gen;
        ;
      }
      jj_consume_token(47);
      break;
    default:
      jj_la1[18] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

//ExprOrAssign -> "(" [Args] ")" ";"
//              | [ "[" Expr() "]" ] "=" Expr() ";"
  static final public void ExprOrAssign() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 50:
      jj_consume_token(50);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 16:
      case 17:
      case 18:
      case 19:
      case INTLIT:
      case DBLLIT:
      case ID:
      case 34:
      case 39:
      case 50:
        Args();
        break;
      default:
        jj_la1[19] = jj_gen;
        ;
      }
      jj_consume_token(51);
      jj_consume_token(47);
      break;
    case 46:
    case 52:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 52:
        jj_consume_token(52);
        Expr();
        jj_consume_token(53);
        break;
      default:
        jj_la1[20] = jj_gen;
        ;
      }
      jj_consume_token(46);
      Expr();
      jj_consume_token(47);
      break;
    default:
      jj_la1[21] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

// Args -> Expr {"," Expr}
//
  static final public void Args() throws ParseException {
    Expr();
    label_10:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 48:
        ;
        break;
      default:
        jj_la1[22] = jj_gen;
        break label_10;
      }
      jj_consume_token(48);
      Expr();
    }
  }

// PrArg -> Expr | <STRLIT>
//
  static final public void PrArg() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 16:
    case 17:
    case 18:
    case 19:
    case INTLIT:
    case DBLLIT:
    case ID:
    case 34:
    case 39:
    case 50:
      Expr();
      break;
    case STRLIT:
      jj_consume_token(STRLIT);
      break;
    default:
      jj_la1[23] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

// ExprNew -> BasicType "[" <INTLIT> "]"
//          | <ID> "(" ")"
  static final public void ExprNew() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 12:
    case 13:
    case 14:
      BasicType();
      jj_consume_token(52);
      jj_consume_token(INTLIT);
      jj_consume_token(53);
      break;
    case ID:
      jj_consume_token(ID);
      jj_consume_token(50);
      jj_consume_token(51);
      break;
    default:
      jj_la1[24] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

// Expr -> AndRule {"||" AndRule}
  static final public void Expr() throws ParseException {
    AndRule();
    label_11:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 38:
        ;
        break;
      default:
        jj_la1[25] = jj_gen;
        break label_11;
      }
      jj_consume_token(38);
      AndRule();
    }
  }

// AndRule -> CompRule {"&&" CompRule}
  static final public void AndRule() throws ParseException {
    CompRule();
    label_12:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 37:
        ;
        break;
      default:
        jj_la1[26] = jj_gen;
        break label_12;
      }
      jj_consume_token(37);
      CompRule();
    }
  }

//CompRule -> AddSubRule {Compare AddSubRule}
  static final public void CompRule() throws ParseException {
    AddSubRule();
    label_13:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 40:
      case 41:
      case 42:
      case 43:
      case 44:
      case 45:
        ;
        break;
      default:
        jj_la1[27] = jj_gen;
        break label_13;
      }
      Compare();
      AddSubRule();
    }
  }

//Compare -> "==" | "!=" | "<" | "<=" | ">" | ">="
  static final public void Compare() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 40:
      jj_consume_token(40);
      break;
    case 41:
      jj_consume_token(41);
      break;
    case 42:
      jj_consume_token(42);
      break;
    case 43:
      jj_consume_token(43);
      break;
    case 44:
      jj_consume_token(44);
      break;
    case 45:
      jj_consume_token(45);
      break;
    default:
      jj_la1[28] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

//AddSubRule -> MulDivRule {AddSub MulDivRule}
  static final public void AddSubRule() throws ParseException {
    MulDivRule();
    label_14:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 33:
      case 34:
        ;
        break;
      default:
        jj_la1[29] = jj_gen;
        break label_14;
      }
      AddSub();
      MulDivRule();
    }
  }

  static final public void AddSub() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 33:
      jj_consume_token(33);
      break;
    case 34:
      jj_consume_token(34);
      break;
    default:
      jj_la1[30] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

//MulDivRule -> UnOpRule {MulDiv UnOpRule}
  static final public void MulDivRule() throws ParseException {
    UnOpRule();
    label_15:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 35:
      case 36:
        ;
        break;
      default:
        jj_la1[31] = jj_gen;
        break label_15;
      }
      MulDiv();
      UnOpRule();
    }
  }

//MulDiv -> "*" | "/"
  static final public void MulDiv() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 35:
      jj_consume_token(35);
      break;
    case 36:
      jj_consume_token(36);
      break;
    default:
      jj_la1[32] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

//UnOpRule -> UnOp MethodCallRule | MethodCallRule
  static final public void UnOpRule() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 34:
    case 39:
      UnOp();
      UnOpRule();
      break;
    case 16:
    case 17:
    case 18:
    case 19:
    case INTLIT:
    case DBLLIT:
    case ID:
    case 50:
      MethodCallRule();
      break;
    default:
      jj_la1[33] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

//UnOp -> "-" | "!"
  static final public void UnOp() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 34:
      jj_consume_token(34);
      break;
    case 39:
      jj_consume_token(39);
      break;
    default:
      jj_la1[34] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

//MethodCallRule -> ParensNewRule | ExtId ExprOrMethod
  static final public void MethodCallRule() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 16:
    case 17:
    case 18:
    case INTLIT:
    case DBLLIT:
    case 50:
      ParensNewRule();
      break;
    case 19:
    case ID:
      ExtId();
      ExprOrMethod();
      break;
    default:
      jj_la1[35] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

//ExprOrMethod -> "(" [Args] ")" | [ "[" Expr "]" ]
  static final public void ExprOrMethod() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 50:
      jj_consume_token(50);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 16:
      case 17:
      case 18:
      case 19:
      case INTLIT:
      case DBLLIT:
      case ID:
      case 34:
      case 39:
      case 50:
        Args();
        break;
      default:
        jj_la1[36] = jj_gen;
        ;
      }
      jj_consume_token(51);
      break;
    default:
      jj_la1[38] = jj_gen;
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 52:
        jj_consume_token(52);
        Expr();
        jj_consume_token(53);
        break;
      default:
        jj_la1[37] = jj_gen;
        ;
      }
    }
  }

//ParensNewRule -> "(" Expr ")" | "new" ExprNew | Literal
  static final public void ParensNewRule() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 50:
      jj_consume_token(50);
      Expr();
      jj_consume_token(51);
      break;
    case 18:
      jj_consume_token(18);
      ExprNew();
      break;
    case 16:
    case 17:
    case INTLIT:
    case DBLLIT:
      Literal();
      break;
    default:
      jj_la1[39] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

//ExtId -> ["this" "." ] <ID> {"."  <ID> }
  static final public void ExtId() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 19:
      jj_consume_token(19);
      jj_consume_token(49);
      break;
    default:
      jj_la1[40] = jj_gen;
      ;
    }
    jj_consume_token(ID);
    label_16:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 49:
        ;
        break;
      default:
        jj_la1[41] = jj_gen;
        break label_16;
      }
      jj_consume_token(49);
      jj_consume_token(ID);
    }
  }

//Literal -> <INTLIT> | DBLLIT | "true" | "false"
  static final public void Literal() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INTLIT:
      jj_consume_token(INTLIT);
      break;
    case DBLLIT:
      jj_consume_token(DBLLIT);
      break;
    case 16:
      jj_consume_token(16);
      break;
    case 17:
      jj_consume_token(17);
      break;
    default:
      jj_la1[42] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  static private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  static private boolean jj_3R_17() {
    if (jj_3R_18()) return true;
    if (jj_scan_token(ID)) return true;
    return false;
  }

  static private boolean jj_3_2() {
    if (jj_3R_17()) return true;
    return false;
  }

  static private boolean jj_3_1() {
    if (jj_3R_17()) return true;
    return false;
  }

  static private boolean jj_3R_21() {
    if (jj_scan_token(52)) return true;
    return false;
  }

  static private boolean jj_3R_19() {
    if (jj_3R_20()) return true;
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_21()) jj_scanpos = xsp;
    return false;
  }

  static private boolean jj_3R_18() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_19()) {
    jj_scanpos = xsp;
    if (jj_scan_token(32)) return true;
    }
    return false;
  }

  static private boolean jj_3R_20() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_scan_token(13)) {
    jj_scanpos = xsp;
    if (jj_scan_token(14)) {
    jj_scanpos = xsp;
    if (jj_scan_token(12)) return true;
    }
    }
    return false;
  }

  static private boolean jj_initialized_once = false;
  /** Generated Token Manager. */
  static public LLGrammarTokenManager token_source;
  static SimpleCharStream jj_input_stream;
  /** Current token. */
  static public Token token;
  /** Next token. */
  static public Token jj_nt;
  static private int jj_ntk;
  static private Token jj_scanpos, jj_lastpos;
  static private int jj_la;
  static private int jj_gen;
  static final private int[] jj_la1 = new int[43];
  static private int[] jj_la1_0;
  static private int[] jj_la1_1;
  static {
      jj_la1_init_0();
      jj_la1_init_1();
   }
   private static void jj_la1_init_0() {
      jj_la1_0 = new int[] {0x40,0x80,0x7000,0x200,0x0,0x7000,0x1d80000,0x1d80000,0x7900,0x0,0x7800,0x0,0x7000,0x7000,0x1d80000,0x200000,0xe00f0000,0x600f0000,0x1d80000,0x600f0000,0x0,0x0,0x0,0xe00f0000,0x7000,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x600f0000,0x0,0x600f0000,0x600f0000,0x0,0x0,0x60070000,0x80000,0x0,0x60030000,};
   }
   private static void jj_la1_init_1() {
      jj_la1_1 = new int[] {0x0,0x0,0x1,0x0,0x10000,0x1,0x400001,0x400001,0x1,0x4000,0x1,0x100000,0x1,0x0,0x400001,0x0,0x40085,0x40085,0x400001,0x40085,0x100000,0x144000,0x10000,0x40085,0x1,0x40,0x20,0x3f00,0x3f00,0x6,0x6,0x18,0x18,0x40085,0x84,0x40001,0x40085,0x100000,0x40000,0x40000,0x0,0x20000,0x0,};
   }
  static final private JJCalls[] jj_2_rtns = new JJCalls[2];
  static private boolean jj_rescan = false;
  static private int jj_gc = 0;

  /** Constructor with InputStream. */
  public LLGrammar(java.io.InputStream stream) {
     this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public LLGrammar(java.io.InputStream stream, String encoding) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser.  ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source = new LLGrammarTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 43; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream) {
     ReInit(stream, null);
  }
  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream, String encoding) {
    try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 43; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Constructor. */
  public LLGrammar(java.io.Reader stream) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser. ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    jj_input_stream = new SimpleCharStream(stream, 1, 1);
    token_source = new LLGrammarTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 43; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Reinitialise. */
  static public void ReInit(java.io.Reader stream) {
    jj_input_stream.ReInit(stream, 1, 1);
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 43; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Constructor with generated Token Manager. */
  public LLGrammar(LLGrammarTokenManager tm) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser. ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 43; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Reinitialise. */
  public void ReInit(LLGrammarTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 43; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  static private Token jj_consume_token(int kind) throws ParseException {
    Token oldToken;
    if ((oldToken = token).next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    if (token.kind == kind) {
      jj_gen++;
      if (++jj_gc > 100) {
        jj_gc = 0;
        for (int i = 0; i < jj_2_rtns.length; i++) {
          JJCalls c = jj_2_rtns[i];
          while (c != null) {
            if (c.gen < jj_gen) c.first = null;
            c = c.next;
          }
        }
      }
      return token;
    }
    token = oldToken;
    jj_kind = kind;
    throw generateParseException();
  }
